# tcc-adventure

./: README.md  pyproject.toml
tcc_adventure/: game.py
tcc_adventure/characters/: character.py  character_manager.py
tcc_adventure/data/: classes.json  equipment.json  races.json
tcc_adventure/database/db_input/: abilities.json
tcc_adventure/utils/: data_loader.py  generics.py  input_validation.py
